Update ENV Variables

--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ NODE_ENV=development
 PORT=3000
 YOTI_CLIENT_SDK_ID=754182a1-fbf6-4a20-8615-cf4666f964cc
 YOTI_KEY_FILE_PATH=/app/keys/Kaimai-Yoti-ultra-basic-share-keys.pem
-APP_URL=https://localhost:3000
+APP_URL=kaimaiyoti.azurewebsites.net
