Stage-point Docker Compose local version

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3000
-YOTI_CLIENT_SDK_ID=754182a1-fbf6-4a20-8615-cf4666f964cc
-YOTI_KEY_FILE_PATH=/app/keys/Kaimai-Yoti-ultra-basic-share-keys.pem
-APP_URL=kaimaiyoti.azurewebsites.net
+APP_URL=https://localhost:3000
+YOTI_CLIENT_SDK_ID=49eb6252-e8e7-4ac1-b581-b4aa2cbabef3
+YOTI_KEY_FILE_PATH=/app/keys/Kaimai-Yoti-Local-access-security.pem #app for Docker or relative path
