--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 NODE_ENV=production
 PORT=8080
-APP_URL=https://ky.ambitiousisland-c90fab44.uksouth.azurecontainerapps.io
+APP_URL=https://kaimaiyoti.azurewebsites.net
 YOTI_CLIENT_SDK_ID=754182a1-fbf6-4a20-8615-cf4666f964cc
-YOTI_KEY_FILE_PATH=/app/keys/Kaimai-Yoti-ultra-basic-share-keys.pem
+#YOTI_KEY_FILE_PATH=Azure Key Vault
