--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,23 +2,23 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Copy package files
+# Copy package files and install dependencies
 COPY package*.json ./
 RUN npm install
 
 # Copy application files
-COPY client/ ./client/
-COPY server/ ./server/
+COPY . .
 
-# Ensure permissions are set before switching users
+# Ensure permissions are set
 RUN chown -R node:node /app && chmod -R 755 /app
 
 # Switch to non-root user
 USER node
 
-ENV NODE_ENV=production \
-    PORT=8080
+ENV NODE_ENV=development \
+    PORT=3000
 
-EXPOSE 8080
+EXPOSE 3000
 
+# Start the application
 CMD ["node", "server/server.js"]
