--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "dependencies": {
+    "@azure/identity": "^4.5.0",
+    "@azure/keyvault-secrets": "^4.9.0",
+    "@azure/msal-node": "^2.16.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
@@ -16,6 +19,6 @@
     "dev": "nodemon server/server.js"
   },
   "engines": {
-    "node": "20.18.0"
+    "node": ">=20.18.0"
   }
 }
